[package]
name = "Pretendo_Frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
futures = "0.3.30"
regex = "1.10.6"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }

